--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,22 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'Post 0: Basil'
+date: 2019-01-29
 permalink: /posts/2012/08/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - FirstPost
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+My name is Basil Wong and there are two sides of me. 
 
-Headings are cool
-======
+A qucik summary of my professional side would be(pulled directly from my LinkedIn Bio):
 
-You can have many headings
-======
+Interested in building things via software and physics. Loves working in teams, always looking to learn.
 
-Aren't headings cool?
-------
+There's also the side of me that's not defined by my career:
+
+I am 22 as of writing this post, I am the oldest of three brothers and I grew up in Vancouver. I love my parents, my Mom gives us compassion and the ability to appriciate, my Dad is our hero who inspires us to strive for our dreams. My brothers are my best friends who keep me on my toes. 
+
+
+
+
+
