Edited post 0 so that it looks nicer

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -6,27 +6,36 @@ tags:
   - FirstPost
 ---
 
-My name is Basil Wong and there are two sides of me. 
+My name is Basil Wong and there are __two sides___ of me. 
 
-A qucik summary of my professional side would be(pulled directly from my LinkedIn Bio):
+A qucik summary of my _professional_ side would be:
 
-Interested in building things via software and physics. Loves working in teams, always looking to learn.
 
-There's also the side of me that's not defined by my career:
+```
+Interested in building things via software and physics. Loves working in teams, always looking to learn.(pulled directly from my LinkedIn Bio)
+```
+
+
+There's also the side of me that's not _defined_ by my career:
+
 
 I am 22 as of writing this post, I am the oldest of three brothers and I grew up in Vancouver. I love my parents, my Mom gives us compassion and the ability to appriciate, my Dad is our hero who inspires us to strive for our dreams. My little brothers are my best friends who keep me on my toes. 
 
-<img src="https://basilwong.github.io/files/post0/brothers.jpg"/>
+
+<img src="https://basilwong.github.io/files/post0/brothers.jpg" height="300"/>
+<br/>
 
 I obsessively follow three sports hockey(NHL, Canucks), basketball(NBA, Celtics), and football(NFL, Cowboys). Growing up I played competative hockey until I went to university where I continued to play through interamurals. 
 
-<p><img src="https://basilwong.github.io/files/post0/celtics.jpg"/>My family at a celtics game.<p/>
+<p><img src="https://basilwong.github.io/files/post0/celtics.jpg" height="300"/>My family at a celtics game.<p/>
 <br/>
-<p><img src="https://basilwong.github.io/files/post0/fizz_hockey.jpg"/><p/>
+<p><img src="https://basilwong.github.io/files/post0/fizz_hockey.JPG" height="300"/><p/>
+<br/>
 
 I love to play the piano and guitar. Recently I've started overcoming my stage fright and started performing. More about that in a later post.
 
-<img src="https://basilwong.github.io/files/post0/guitar.jpg"/>
+<img src="https://basilwong.github.io/files/post0/guitar.jpg" height="300"/>
+<br/>
 
 My favourite pasttime right now is playing online poker, though I played video games when I was younger. 
 
