Fixed small errors in the pages

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -6,14 +6,14 @@ tags:
   - FirstPost
 ---
 
-My name is Basil Wong and there are __two sides___ of me. 
+My name is Basil Wong and there are __two sides__ of me. 
 
 A qucik summary of my _professional_ side would be:
 
 
-```
-Interested in building things via software and physics. Loves working in teams, always looking to learn.(pulled directly from my LinkedIn Bio)
-```
+
+"Interested in building things via software and physics. Loves working in teams, always looking to learn."(pulled directly from my LinkedIn Bio)
+
 
 
 There's also the side of me that's not _defined_ by my career:
