added files for 2nd blog

--- a/_posts/-----2012-08-14-blog-post-2.md
+++ b/_posts/-----2012-08-14-blog-post-2.md
@@ -1,8 +1,45 @@
 ---
-title: 'Post 1: Growing Up Playing Hockey'
+title: 'Post 1: Teaching Engineering To High Schoolers'
 date: 2019-02-26
 permalink: /posts/Post0
 tags: Hockey
 ---
 
-I started 
+This last summer I got permission to take a couple weeks off of my research job at Walus labs in order to teach an engineering summer camp to high school students. In this blog post I would like to share my experiences, and my teaching plan for those who are interesting in teaching or passionate about engineering. Hopefully the information in this post can act as a stepping stone for something greater in the future. 
+
+To start I want the reader to know that I cherished the experience of teaching the students. It brought me back to when I was their age. Additionally, I enjoyed the oppurtunity to interact with kids who were interested in learnin engineering from me. Overall, I was impressed with how they soaked everything up lke a sponge. 
+
+<img src="https://basilwong.github.io/files/stem-camp/teachers.jpg" width='250'>
+
+The camp that I taught for was located in Richmond and operated out of Mcnair Secondary School in Richmond, BC. I was given the task of creating a two week plan to teach them basic engineering principles on a topic of my choice and to have them present a science fair project for the end of the camp. 
+
+<img src="https://basilwong.github.io/files/stem-camp/teaching-plan-2.JPG" width='250'>
+[Download Here](https://basilwong.github.io/files/stem-camp/teaching-plan-2.pdf)
+
+I opted to create a teaching plan that involved the kids getting hands on experience with the robots. Two weeks befoore the beginning of the camp I ordered 3 [mbot educational robotics packages](https://www.digikey.com/en/product-highlight/m/makeblock/mbot-educational-robotics-platform) Here is a video of me making andn playing around with the mbots a week before the camp. I build and testing some code on it right as the bot arrived, because they looked fun. And also because I wanted to test if all the packages had all the parts and the robot was working properly for when the camp started.
+
+<video src="https://basilwong.github.io/files/stem-camp/testing-out-mbot.mp4" poster="https://basilwong.github.io/files/stem-camp/testing-out-mbot-moment.jpg" controls preload></video>
+
+On day one I was extremely excited. I came in on my first day, greeted and greeted the kids. I was instructed by the camp to tell the kids about my experience and my research on the first day so that if they were interested they could contact me if they wanted advice or had questions on a related topic. 
+
+[Download the Intro Presentation Here](https://basilwong.github.io/files/stem-camp/intro.pptx)
+
+On my second day I brought in the mbots. Getting there early I set them up in a display where they were all moving simultaneously, which got a laugh from the kids. Capturing their curiosity with the bots, I did a presentation on some of the basic components of the mbot so that they'd have a background knowledge on the pieces they'd be handlling. In these slides I also have parts which were presented the next day which outlined how to program the mbots using the Arduino IDE. Additionally, the files outlined the 'missions' the robots would be going on. Essentially, these missions were tasks for the kids to complete to practice the fundamentals of coding. I think if I could go back and do it again, I'd opt for a simpler coding language such as sketch to start. I knew some of the kids could handle using Arduino, but the beginners in programming definitely needed support and sketch has a smaller learning curve. This reduced support requirement is beneficial for a single teacher with 12 students. Mind you after this class I came to repect real high school teachers who have to handle upwards of 20-30 students per class. 
+
+[Download the Presentation Here](https://basilwong.github.io/files/stem-camp/engineering-and-technology.pptx)
+
+The day after the students built the robots, I got permission to bring them into the computer lab. Here is the short presentation I gave them with some reminders before letting them work on completing the missions. 
+
+[Download the Presentation Here](https://basilwong.github.io/files/stem-camp/how-to-start-mbot.pptx)
+
+The rest of the week was dedicated to the kids working towards competing in a competition which I decided to do upon talking to the students instead of further missions. Essentially the competition was a robot sumo wrestling contest. It was a round robin style tournament where in each contest the students would upload their program into one of the mbots and then try to push the other mbot outside of the ring. Lessons that I took from doing this with the students is that they immediately got very excited and wanted to just into programming with their respective teams without any planning, testing or modularization. I think for future iterations of this lesson it would be best to have them draw out a plan (at least a bare bones one) before starting the programming. Some teams ended up fully revamping their plan last minute before the competition, and a plan would have made this less likely. 
+
+[Download the Presentation Here](https://basilwong.github.io/files/stem-camp/competition.pptx)
+
+Below is a video of Team 1's programm winning the final. 
+
+<video src="https://basilwong.github.io/files/stem-camp/winning.mp4" poster="https://basilwong.github.io/files/stem-camp/winning-moment.jpg" controls preload></video>
+
+
+
+
