--- a/_posts/2012-08-15-blog-post-2.md
+++ b/_posts/2012-08-15-blog-post-2.md
@@ -1,8 +1,8 @@
 ---
 title: 'Post 1: Teaching Engineering To High Schoolers'
 date: 2019-02-26
-permalink: /posts/Post0
-tags: Hockey
+permalink: /posts/Post1
+tags: Teaching, Teaching Plan
 ---
 
 This last summer I got permission to take a couple weeks off of my research job at Walus labs in order to teach an engineering summer camp to high school students. In this blog post I would like to share my experiences, and my teaching plan for those who are interesting in teaching or passionate about engineering. Hopefully the information in this post can act as a stepping stone for something greater in the future. 
@@ -13,12 +13,12 @@ To start I want the reader to know that I cherished the experience of teaching t
 
 The camp that I taught for was located in Richmond and operated out of Mcnair Secondary School in Richmond, BC. I was given the task of creating a two week plan to teach them basic engineering principles on a topic of my choice and to have them present a science fair project for the end of the camp. 
 
-<img src="https://basilwong.github.io/files/stem-camp/teaching-plan-2.JPG" width='250'>
+<img src="https://basilwong.github.io/files/stem-camp/teaching-plan-2.JPG">
 [Download Here](https://basilwong.github.io/files/stem-camp/teaching-plan-2.pdf)
 
 I opted to create a teaching plan that involved the kids getting hands on experience with the robots. Two weeks befoore the beginning of the camp I ordered 3 [mbot educational robotics packages](https://www.digikey.com/en/product-highlight/m/makeblock/mbot-educational-robotics-platform) Here is a video of me making andn playing around with the mbots a week before the camp. I build and testing some code on it right as the bot arrived, because they looked fun. And also because I wanted to test if all the packages had all the parts and the robot was working properly for when the camp started.
 
-<video src="https://basilwong.github.io/files/stem-camp/testing-out-mbot.mp4" poster="https://basilwong.github.io/files/stem-camp/testing-out-mbot-moment.jpg" controls preload></video>
+<video src="https://basilwong.github.io/files/stem-camp/testing-out-mbot.mp4" poster="https://basilwong.github.io/files/stem-camp/testing-out-mbot-moment.jpg" width='250' controls preload></video>
 
 On day one I was extremely excited. I came in on my first day, greeted and greeted the kids. I was instructed by the camp to tell the kids about my experience and my research on the first day so that if they were interested they could contact me if they wanted advice or had questions on a related topic. 
 
@@ -38,7 +38,7 @@ The rest of the week was dedicated to the kids working towards competing in a co
 
 Below is a video of Team 1's programm winning the final. 
 
-<video src="https://basilwong.github.io/files/stem-camp/winning.mp4" poster="https://basilwong.github.io/files/stem-camp/winning-moment.jpg" controls preload></video>
+<video src="https://basilwong.github.io/files/stem-camp/winning.mp4" poster="https://basilwong.github.io/files/stem-camp/winning-moment.jpg" width='250' controls preload></video>
 
 
 
