added pages for capstones

--- a/_posts/2012-08-15-blog-post-2.md
+++ b/_posts/2012-08-15-blog-post-2.md
@@ -13,7 +13,7 @@ To start I want the reader to know that I cherished the experience of teaching t
 
 The camp that I taught for was located in Richmond and operated out of Mcnair Secondary School in Richmond, BC. I was given the task of creating a two week plan to teach them basic engineering principles on a topic of my choice and to have them present a science fair project for the end of the camp. 
 
-<img src="https://basilwong.github.io/files/stem-camp/teaching-plan-2.JPG">
+<img src="https://basilwong.github.io/files/stem-camp/teaching-plan-2.JPG"> <br/>
 [Download Here](https://basilwong.github.io/files/stem-camp/teaching-plan-2.pdf)
 
 I opted to create a teaching plan that involved the kids getting hands on experience with the robots. Two weeks befoore the beginning of the camp I ordered 3 [mbot educational robotics packages](https://www.digikey.com/en/product-highlight/m/makeblock/mbot-educational-robotics-platform) Here is a video of me making andn playing around with the mbots a week before the camp. I build and testing some code on it right as the bot arrived, because they looked fun. And also because I wanted to test if all the packages had all the parts and the robot was working properly for when the camp started.
@@ -38,7 +38,7 @@ The rest of the week was dedicated to the kids working towards competing in a co
 
 Below is a video of Team 1's programm winning the final. 
 
-<video src="https://basilwong.github.io/files/stem-camp/winning.mp4" poster="https://basilwong.github.io/files/stem-camp/winning-moment.jpg" width='250' controls preload></video>
+<video src="https://basilwong.github.io/files/stem-camp/winning.mp4" poster="https://basilwong.github.io/files/stem-camp/winning-moment.jpg" width='400' controls preload></video>
 
 
 
